client-side/src/app/components/arf-oversight-page/comum/arf-modal/arf-modal.component.scss
.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 999;
  width: 100vw;
  height: 100vh;
  background-color: #0000005b;

  &__box {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 10px;
    box-shadow: 0 0 #000;
    border: 1px solid #000;
    padding: 50px 30px;
    background-color: #fff;
    width: fit-content;
    letter-spacing: 2px;
  }
}

.autoHidden {
  animation: autoHidden .75s forwards linear;
}

@keyframes autoHidden {
  from {
    opacity: 9;
  }

  to {
    opacity: 1;
  }
}

